--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,9 @@
         <module>main/plugins/org.talend.hadoop.distribution.cdh570</module>
         <module>main/plugins/org.talend.hadoop.distribution.cdh570.jars</module>
         <module>main/plugins/org.talend.hadoop.distribution.cdh580</module>
+        <module>main/plugins/org.talend.hadoop.distribution.cdh580spark2</module>
         <module>main/plugins/org.talend.hadoop.distribution.cdh580.jars</module>                
+        <module>main/plugins/org.talend.hadoop.distribution.cdh580spark2.jars</module>                
         <module>main/plugins/org.talend.hadoop.distribution.custom</module>
         <module>main/plugins/org.talend.hadoop.distribution.emr103</module>
         <module>main/plugins/org.talend.hadoop.distribution.emr240</module>
@@ -149,6 +151,7 @@
         <module>test/plugins/org.talend.hadoop.distribution.cdh550.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.cdh570.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.cdh580.test</module>        
+        <module>test/plugins/org.talend.hadoop.distribution.cdh580spark2.test</module>        
         <module>test/plugins/org.talend.hadoop.distribution.custom.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.emr103.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.emr240.test</module>
