--- a/main/plugins/org.talend.hadoop.distribution.dataproc11/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.dataproc11/plugin.xml
@@ -161,6 +161,21 @@
             mvn_uri="mvn:org.talend.libraries/snappy-java-dataproc11/6.1.0">
         </libraryNeeded>
         
+        <!-- Parquet -->
+        	 <library id="jodd-core-3.5.2.jar"/>
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.dataproc11"
+            id="jodd-core-3.5.2-dataproc11"
+            name="jodd-core-3.5.2.jar"
+            mvn_uri="mvn:org.talend.libraries/jodd-core-3.5.2/6.0.0">
+        </libraryNeeded> 	 
+        
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.dataproc11"
+            id="parquet-hadoop-bundle-1.6.0-dataproc11"
+            name="parquet-hadoop-bundle-1.6.0.jar"
+            mvn_uri="mvn:org.talend.libraries/parquet-hadoop-bundle-1.6.0/6.0.0">
+        </libraryNeeded>
       
         
         <!-- SPARK libraries --> 
@@ -476,9 +491,9 @@
 			 <library id="scala-reflect-2.11.8.jar"/>
              <library id="kryo-shaded-3.0.3.jar"/>
              
-             <library id="jodd-core-3.5.2.jar"/>
+             <library id="jodd-core-3.5.2-dataproc11"/>
              <library id="scala-library-2.11.8.jar"/>
-             <library id="parquet-hadoop-bundle-1.6.0.jar"/>
+             <library id="parquet-hadoop-bundle-1.6.0-dataproc11"/>
                   
              <library id="spark-catalyst_2.11-2.0.2.jar"/>
              <library id="spark-core_2.11-2.0.2.jar"/>
@@ -521,8 +536,8 @@
                 description="Spark libraries for GOOGLE DATAPROC 1.1 that are MRREQUIRED"
                 id="SPARK-PARQUET-LIB-MRREQUIRED-DATAPROC11"
                 name="SPARK-PARQUET-LIB-MRREQUIRED-DATAPROC11">
-             <library id="parquet-hadoop-bundle-1.6.0.jar"/>
-             <library id="jodd-core-3.5.2.jar"/>      
+             <library id="parquet-hadoop-bundle-1.6.0-dataproc11"/>
+             <library id="jodd-core-3.5.2-dataproc11"/>      
         </libraryNeededGroup>
     </extension>
 
