--- a/main/plugins/org.talend.hadoop.distribution.hdinsight360/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdinsight360/plugin.xml
@@ -268,14 +268,53 @@
              <library id="spark-mllib_2.11-2.1.0.2.6.0.2-76" />
              <library id="spark-mllib-local_2.11-2.1.0.2.6.0.2-76" />
         </libraryNeededGroup>
-
+        
+        <!-- Spark SQL group MRREQUIRED -->
+        <libraryNeededGroup
+                description="Spark libraries for HDInsight 3.6.0 that are MRRequired for Parquet"
+                id="SPARK-SQL-LIB-MRREQUIRED-HD_INSIGHT_3_6_0"
+                name="SPARK-SQL-LIB-MRREQUIRED-HD_INSIGHT_3_6_0">
+             <library id="scala-reflect-2.11.8" />
+             <library id="spark-catalyst_2.11-2.1.0.2.6.0.2-76" />             
+             <library id="spark-sql_2.11-2.1.0.2.6.0.2-76" />
+        </libraryNeededGroup>
+        
+        <!-- Spark Parquet group MRREQUIRED -->
+        <libraryNeededGroup
+                description="Spark libraries for HDInsight 3.6.0 that are MRRequired for Parquet"
+                id="SPARK-PARQUET-LIB-MRREQUIRED-HD_INSIGHT_3_6_0"
+                name="SPARK-PARQUET-LIB-MRREQUIRED-HD_INSIGHT_3_6_0">
+             <library id="commons-logging-1.1.3" />
+        </libraryNeededGroup>
+        
+        <!-- Spark Hive group MRREQUIRED -->
+        <libraryNeededGroup
+                description="Spark Hive libraries for HDInsight 3.6.0 that are MRREQUIRED"
+                id="SPARK-HIVE-LIB-MRREQUIRED-HD_INSIGHT_3_6_0"
+                name="SPARK-HIVE-LIB-MRREQUIRED-HD_INSIGHT_3_6_0">
+            <library id="spark-hive_2.11-2.1.0.2.6.0.2-76"/>
+        </libraryNeededGroup>
+        
         <!-- Spark Streaming group -->
         <libraryNeededGroup
                 description="Spark Streaming libraries for HDInsight 3.6.0"
                 id="SPARK-STREAMING-LIB-HD_INSIGHT_3_6_0"
                 name="SPARK-STREAMING-LIB-HD_INSIGHT_3_6_0">
              <library id="spark-streaming_2.11-2.1.0.2.6.0.2-76" />
+             <library id="jodd-core-3.5.2" />
+             
         </libraryNeededGroup>
-
+        
+        <!-- Spark Streaming Parquet group MRREQUIRED -->
+        <libraryNeededGroup
+                description="Spark libraries for HDInsight 3.6.0 that are MRRequired for Parquet"
+                id="SPARK-STREAMING-PARQUET-LIB-MRREQUIRED-HD_INSIGHT_3_6_0"
+                name="SPARK-STREAMING-PARQUET-LIB-MRREQUIRED-HD_INSIGHT_3_6_0">
+             <library id="commons-logging-1.1.3" />
+             <library id="parquet-format-2.3.0-incubating" />
+             <library id="parquet-hadoop-1.8.1" />
+             <library id="parquet-hadoop-bundle-1.6.0" />
+        </libraryNeededGroup>
+        
     </extension>
 </plugin>
