--- a/main/plugins/org.talend.hadoop.distribution.emr540/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr540/plugin.xml
@@ -102,12 +102,24 @@
             name="hbase-hadoop-compat-1.3.0.jar"
             mvn_uri="mvn:org.talend.libraries/hbase-hadoop-compat-1.3.0/6.0.0"/>
 
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.emr540"
+            id="netty-all-4.0.23.Final.jar"
+            name="netty-all-4.0.23.Final.jar"
+            mvn_uri="mvn:org.talend.libraries/netty-all-4.0.23.Final/6.0.0"/>
+
         <!-- Hive libraries -->
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr540"
             id="hive-exec-emr540-latest"
             name="hive-exec-2.1.1-amzn-0.jar"
             mvn_uri="mvn:org.talend.libraries/hive-exec-2.1.1-amzn-0/6.0.0"/>
+
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.emr500"
+            id="hive-exec-2.1.1-amzn-0-talend-nolang3"
+            name="hive-exec-2.1.1-amzn-0-talend-nolang3.jar" 
+            mvn_uri="mvn:org.talend.libraries/hive-exec-2.1.1-amzn-0-talend-nolang3/6.0.0"/>
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr540"
@@ -183,6 +195,13 @@
             mvn_uri="mvn:org.talend.libraries/pig-0.16.0-amzn-0-core-h2/6.0.0"/>
 
         <libraryNeeded
+            context="plugin:org.talend.libraries.hadoop"
+            id="parquet-pig-bundle-emr540-latest"
+            name="parquet-pig-bundle-1.6.0.jar" 
+            mvn_uri="mvn:org.talend.libraries/parquet-pig-bundle-1.6.0/6.0.0"
+            uripath="platform:/plugin/org.talend.libraries.hadoop/lib/parquet-pig-bundle-1.6.0.jar"/>
+
+        <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr540"
             id="piggybank-emr540-latest"
             name="piggybank-emr540.jar"
@@ -241,14 +260,14 @@
         <libraryNeeded
             context="plugin:org.talend.libraries.s3"
             id="aws-java-sdk-s3-emr540-latest"
-            name="aws-java-sdk-s3-1.10.77.jar"
-            mvn_uri="mvn:org.talend.libraries/aws-java-sdk-s3-1.10.77/6.0.0"/>
+            name="aws-java-sdk-s3-1.10.75.1.jar"
+            mvn_uri="mvn:org.talend.libraries/aws-java-sdk-s3-1.10.75.1/6.0.0"/>
 
         <libraryNeeded
             context="plugin:org.talend.libraries.s3"
             id="aws-java-sdk-core-emr540-latest"
-            name="aws-java-sdk-core-1.10.77.jar"
-            mvn_uri="mvn:org.talend.libraries/aws-java-sdk-core-1.10.77/6.0.0"/>
+            name="aws-java-sdk-core-1.10.75.1.jar"
+            mvn_uri="mvn:org.talend.libraries/aws-java-sdk-core-1.10.75.1/6.0.0"/>
 
         <libraryNeeded
             context="plugin:org.talend.libraries.s3"
@@ -1450,20 +1469,20 @@
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr540"
             id="aws-java-sdk-kinesis-emr540-latest"
-            name="aws-java-sdk-kinesis-1.10.77.jar"
-            mvn_uri="mvn:org.talend.libraries/aws-java-sdk-kinesis-1.10.77/6.0.0"/>
+            name="aws-java-sdk-kinesis-1.10.75.1.jar"
+            mvn_uri="mvn:org.talend.libraries/aws-java-sdk-kinesis-1.10.75.1/6.0.0"/>
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr540"
             id="aws-java-sdk-dynamodb-emr540-latest"
-            name="aws-java-sdk-dynamodb-1.10.77.jar"
-            mvn_uri="mvn:org.talend.libraries/aws-java-sdk-dynamodb-1.10.77/6.0.0"/>
+            name="aws-java-sdk-dynamodb-1.10.75.1.jar"
+            mvn_uri="mvn:org.talend.libraries/aws-java-sdk-dynamodb-1.10.75.1/6.0.0"/>
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr540"
             id="aws-java-sdk-cloudwatch-emr540-latest"
-            name="aws-java-sdk-cloudwatch-1.10.77.jar"
-            mvn_uri="mvn:org.talend.libraries/aws-java-sdk-cloudwatch-1.10.77/6.0.0"/>
+            name="aws-java-sdk-cloudwatch-1.10.75.1.jar"
+            mvn_uri="mvn:org.talend.libraries/aws-java-sdk-cloudwatch-1.10.75.1/6.0.0"/>
 
         <!-- Flume libraries -->
         <libraryNeeded
@@ -1494,12 +1513,6 @@
             name="parquet-avro-1.4.1.jar"
             mvn_uri="mvn:org.talend.libraries/parquet-avro-1.4.1/6.0.0">
         </libraryNeeded>
-
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.emr540"
-            id="jetty-util-emr540-latest"
-            name="jetty-util-6.1.26-emr-emr.jar"
-            mvn_uri="mvn:org.talend.libraries/jetty-util-6.1.26-emr-emr/6.0.0"/>
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr540"
@@ -1546,7 +1559,7 @@
              <library id="slf4j-log4j12-1.7.10.jar"/>
              <library id="log4j-1.2.17.jar"/>
              <library id="jersey-core-1.9.jar"/>
-             <library id="jetty-util-emr540-latest"/>
+             <library id="jetty-util-6.1.26-emr.jar"/>
              <library id="htrace-core-3.1.0-incubating.jar"/>
              <library id="servlet-api-2.5.jar"/>
              <library id="avro-1.7.4.jar"/>
@@ -1608,7 +1621,7 @@
              <library id="jersey-client-1.9.jar"/>
              <library id="jersey-core-1.9.jar"/>
              <library id="log4j-1.2.17.jar"/>
-             <library id="jetty-util-emr540-latest"/>
+             <library id="jetty-util-6.1.26-emr.jar"/>
              <library id="emr-metrics-client-emr540-latest"/>
              <library id="htrace-core-3.1.0-incubating.jar"/>
         </libraryNeededGroup>
@@ -1660,7 +1673,7 @@
              <library id="gson-2.2.4.jar"/>
              <library id="httpcore-4.3.2.jar"/>
              <library id="httpclient-4.3.4.jar"/>
-             <library id="jetty-util-emr540-latest"/>
+             <library id="jetty-util-6.1.26-emr.jar"/>
              <library id="emr-metrics-client-emr540-latest"/>
              <library id="htrace-core-3.1.0-incubating.jar"/>
              <library id="guava-11.0.2.jar"/>
@@ -1757,7 +1770,7 @@
              <library id="guava-12.0.1.jar" />
              <library id="jackson-mapper-asl-1.9.13.jar" />
              <library id="jackson-core-asl-1.9.13.jar" />
-             <library id="netty-all-4.0.42.Final.jar" />
+             <library id="netty-all-4.0.23.Final.jar" />
              <library id="protobuf-java-2.5.0.jar" />
              <library id="log4j-1.2.17.jar" />
              <library id="slf4j-api-1.7.10.jar"/>
@@ -1771,7 +1784,7 @@
                 id="HIVE-LIB-EMR_5_4_0_LATEST"
                 name="HIVE-LIB-EMR_5_4_0_LATEST">
 
-             <library id="hive-exec-2.1.0-talend-nolang3"/>
+             <library id="hive-exec-2.1.1-amzn-0-talend-nolang3"/>
              <library id="hive-metastore-emr540-latest"/>
            	 <library id="hive-jdbc-emr540-latest"/>
 		     <library id="hive-service-emr540-latest"/>
@@ -1847,8 +1860,8 @@
                 description="The latest Spark libraries for EMR 5.4.0"
                 id="SPARK2-LIB-EMR_5_4_0_LATEST"
                 name="SPARK2-LIB-EMR_5_4_0_LATEST">
-            <library id="aws-java-sdk-s3-1.10.77.jar"/>
-            <library id="aws-java-sdk-core-1.10.77.jar"/>
+            <library id="aws-java-sdk-s3-1.10.75.1.jar"/>
+            <library id="aws-java-sdk-core-1.10.75.1.jar"/>
             <library id="activation-1.1.1.jar"/>
 			<library id="antlr-2.7.7.jar"/>
 			<library id="antlr-runtime-3.4.jar"/>
@@ -2180,19 +2193,19 @@
       <!-- EMR 5.4.0 ClassLoaders -->
       <classloader
             index="HIVE2:AMAZON_EMR:EMR_5_4_0:STANDALONE"
-            libraries="antlr-runtime-3.4.jar;avro-1.7.7.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.2.jar;commons-configuration-1.6.jar;commons-httpclient-3.0.1.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.2.jar;curator-client-2.6.0.jar;curator-framework-2.6.0.jar;datanucleus-api-jdo-4.2.1.jar;datanucleus-core-4.1.6.jar;datanucleus-rdbms-4.1.7.jar;derby-10.11.1.1.jar;emr-metrics-client-2.1.0.jar;gson-2.2.4.jar;guava-14.0.1.jar;hadoop-auth-2.7.3-amzn-1.jar;hadoop-common-2.7.3-amzn-1.jar;hadoop-hdfs-2.7.3-amzn-1.jar;hadoop-mapreduce-client-common-2.7.3-amzn-1.jar;hadoop-mapreduce-client-core-2.7.3-amzn-1.jar;hadoop-mapreduce-client-jobclient-2.7.3-amzn-1.jar;hadoop-yarn-api-2.7.3-amzn-1.jar;hadoop-yarn-client-2.7.3-amzn-1.jar;hadoop-yarn-common-2.7.3-amzn-1.jar;hive-exec-2.1.0-talend-nolang3.jar;hive-jdbc-2.1.1-amzn-0.jar;hive-metastore-2.1.1-amzn-0.jar;hive-serde-2.1.1-amzn-0.jar;hive-service-2.1.1-amzn-0.jar;htrace-core-3.1.0-incubating.jar;httpclient-4.3.4.jar;httpcore-4.3.2.jar;jdo-api-3.0.1.jar;libfb303-0.9.3.jar;libthrift-0.9.3.jar;log4j-1.2.17.jar;slf4j-api-1.7.10.jar;slf4j-log4j12-1.7.10.jar;zookeeper-3.4.8.jar">
+            libraries="antlr-runtime-3.4.jar;avro-1.7.7.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.2.jar;commons-configuration-1.6.jar;commons-httpclient-3.0.1.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.2.jar;curator-client-2.6.0.jar;curator-framework-2.6.0.jar;datanucleus-api-jdo-4.2.1.jar;datanucleus-core-4.1.6.jar;datanucleus-rdbms-4.1.7.jar;derby-10.11.1.1.jar;emr-metrics-client-2.1.0.jar;gson-2.2.4.jar;guava-14.0.1.jar;hadoop-auth-2.7.3-amzn-1.jar;hadoop-common-2.7.3-amzn-1.jar;hadoop-hdfs-2.7.3-amzn-1.jar;hadoop-mapreduce-client-common-2.7.3-amzn-1.jar;hadoop-mapreduce-client-core-2.7.3-amzn-1.jar;hadoop-mapreduce-client-jobclient-2.7.3-amzn-1.jar;hadoop-yarn-api-2.7.3-amzn-1.jar;hadoop-yarn-client-2.7.3-amzn-1.jar;hadoop-yarn-common-2.7.3-amzn-1.jar;hive-exec-2.1.1-amzn-0-talend-nolang3.jar;hive-jdbc-2.1.1-amzn-0.jar;hive-metastore-2.1.1-amzn-0.jar;hive-serde-2.1.1-amzn-0.jar;hive-service-2.1.1-amzn-0.jar;htrace-core-3.1.0-incubating.jar;httpclient-4.3.4.jar;httpcore-4.3.2.jar;jdo-api-3.0.1.jar;libfb303-0.9.3.jar;libthrift-0.9.3.jar;log4j-1.2.17.jar;slf4j-api-1.7.10.jar;slf4j-log4j12-1.7.10.jar;zookeeper-3.4.8.jar">
       </classloader>
       <classloader
             index="MAP_REDUCE:AMAZON_EMR:EMR_5_4_0"
-            libraries="avro-1.7.5.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.2.jar;commons-configuration-1.6.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;emr-metrics-client-2.1.0.jar;gson-2.2.4.jar;guava-11.0.2.jar;hadoop-auth-2.7.3-amzn-1.jar;hadoop-common-2.7.3-amzn-1.jar;hadoop-hdfs-2.7.3-amzn-1.jar;hadoop-mapreduce-client-common-2.7.3-amzn-1.jar;hadoop-mapreduce-client-core-2.7.3-amzn-1.jar;hadoop-mapreduce-client-jobclient-2.7.3-amzn-1.jar;hadoop-yarn-api-2.7.3-amzn-1.jar;hadoop-yarn-client-2.7.3-amzn-1.jar;hadoop-yarn-common-2.7.3-amzn-1.jar;htrace-core-3.1.0-incubating.jar;httpclient-4.3.4.jar;httpcore-4.3.2.jar;jackson-core-asl-1.9.13.jar;jackson-jaxrs-1.9.13.jar;jackson-mapper-asl-1.9.13.jar;jackson-xc-1.9.13.jar;jersey-client-1.9.jar;jersey-core-1.9.jar;jetty-util-6.1.26-emr-emr.jar;jodd-core-3.5.2.jar;log4j-1.2.17.jar;parquet-hadoop-bundle-1.8.2.jar;protobuf-java-2.5.0.jar;servlet-api-2.5.jar;slf4j-api-1.7.10.jar;slf4j-log4j12-1.7.10.jar;snappy-java-1.0.5.jar">
+            libraries="avro-1.7.5.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.2.jar;commons-configuration-1.6.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;emr-metrics-client-2.1.0.jar;gson-2.2.4.jar;guava-11.0.2.jar;hadoop-auth-2.7.3-amzn-1.jar;hadoop-common-2.7.3-amzn-1.jar;hadoop-hdfs-2.7.3-amzn-1.jar;hadoop-mapreduce-client-common-2.7.3-amzn-1.jar;hadoop-mapreduce-client-core-2.7.3-amzn-1.jar;hadoop-mapreduce-client-jobclient-2.7.3-amzn-1.jar;hadoop-yarn-api-2.7.3-amzn-1.jar;hadoop-yarn-client-2.7.3-amzn-1.jar;hadoop-yarn-common-2.7.3-amzn-1.jar;htrace-core-3.1.0-incubating.jar;httpclient-4.3.4.jar;httpcore-4.3.2.jar;jackson-core-asl-1.9.13.jar;jackson-jaxrs-1.9.13.jar;jackson-mapper-asl-1.9.13.jar;jackson-xc-1.9.13.jar;jersey-client-1.9.jar;jersey-core-1.9.jar;jetty-util-6.1.26-emr.jar;jodd-core-3.5.2.jar;log4j-1.2.17.jar;parquet-hadoop-bundle-1.8.2.jar;protobuf-java-2.5.0.jar;servlet-api-2.5.jar;slf4j-api-1.7.10.jar;slf4j-log4j12-1.7.10.jar;snappy-java-1.0.5.jar">
       </classloader>
       <classloader
             index="HDFS:AMAZON_EMR:EMR_5_4_0"
-            libraries="avro-1.7.5.jar;commons-cli-1.2.jar;commons-collections-3.2.2.jar;commons-configuration-1.6.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;emr-metrics-client-2.1.0.jar;gson-2.2.4.jar;guava-11.0.2.jar;hadoop-auth-2.7.3-amzn-1.jar;hadoop-common-2.7.3-amzn-1.jar;hadoop-hdfs-2.7.3-amzn-1.jar;htrace-core-3.1.0-incubating.jar;httpclient-4.3.4.jar;httpcore-4.3.2.jar;jackson-core-asl-1.9.13.jar;jackson-jaxrs-1.9.13.jar;jackson-mapper-asl-1.9.13.jar;jackson-xc-1.9.13.jar;jersey-core-1.9.jar;jetty-util-6.1.26-emr-emr.jar;log4j-1.2.17.jar;protobuf-java-2.5.0.jar;servlet-api-2.5.jar;slf4j-api-1.7.10.jar;slf4j-log4j12-1.7.10.jar">
+            libraries="avro-1.7.5.jar;commons-cli-1.2.jar;commons-collections-3.2.2.jar;commons-configuration-1.6.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;emr-metrics-client-2.1.0.jar;gson-2.2.4.jar;guava-11.0.2.jar;hadoop-auth-2.7.3-amzn-1.jar;hadoop-common-2.7.3-amzn-1.jar;hadoop-hdfs-2.7.3-amzn-1.jar;htrace-core-3.1.0-incubating.jar;httpclient-4.3.4.jar;httpcore-4.3.2.jar;jackson-core-asl-1.9.13.jar;jackson-jaxrs-1.9.13.jar;jackson-mapper-asl-1.9.13.jar;jackson-xc-1.9.13.jar;jersey-core-1.9.jar;jetty-util-6.1.26-emr.jar;log4j-1.2.17.jar;protobuf-java-2.5.0.jar;servlet-api-2.5.jar;slf4j-api-1.7.10.jar;slf4j-log4j12-1.7.10.jar">
       </classloader>
       <classloader
             index="HDFS:AMAZON_EMR:EMR_5_4_0?USE_KRB"
-            libraries="avro-1.7.5.jar;commons-cli-1.2.jar;commons-collections-3.2.2.jar;commons-configuration-1.6.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;emr-metrics-client-2.1.0.jar;gson-2.2.4.jar;guava-11.0.2.jar;hadoop-auth-2.7.3-amzn-1.jar;hadoop-common-2.7.3-amzn-1.jar;hadoop-hdfs-2.7.3-amzn-1.jar;htrace-core-3.1.0-incubating.jar;httpclient-4.3.4.jar;httpcore-4.3.2.jar;jackson-core-asl-1.9.13.jar;jackson-jaxrs-1.9.13.jar;jackson-mapper-asl-1.9.13.jar;jackson-xc-1.9.13.jar;jersey-core-1.9.jar;jetty-util-6.1.26-emr-emr.jar;log4j-1.2.17.jar;protobuf-java-2.5.0.jar;servlet-api-2.5.jar;slf4j-api-1.7.10.jar;slf4j-log4j12-1.7.10.jar;hadoop-conf-kerberos.jar">
+            libraries="avro-1.7.5.jar;commons-cli-1.2.jar;commons-collections-3.2.2.jar;commons-configuration-1.6.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;emr-metrics-client-2.1.0.jar;gson-2.2.4.jar;guava-11.0.2.jar;hadoop-auth-2.7.3-amzn-1.jar;hadoop-common-2.7.3-amzn-1.jar;hadoop-hdfs-2.7.3-amzn-1.jar;htrace-core-3.1.0-incubating.jar;httpclient-4.3.4.jar;httpcore-4.3.2.jar;jackson-core-asl-1.9.13.jar;jackson-jaxrs-1.9.13.jar;jackson-mapper-asl-1.9.13.jar;jackson-xc-1.9.13.jar;jersey-core-1.9.jar;jetty-util-6.1.26-emr.jar;log4j-1.2.17.jar;protobuf-java-2.5.0.jar;servlet-api-2.5.jar;slf4j-api-1.7.10.jar;slf4j-log4j12-1.7.10.jar;hadoop-conf-kerberos.jar">
       </classloader>
       <classloader
             index="HBASE:AMAZON_EMR:EMR_5_4_0"
