--- a/main/plugins/org.talend.hadoop.distribution.emr550/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr550/plugin.xml
@@ -752,6 +752,12 @@
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr550"
+            id="parquet-hadoop-bundle-1.6.0.jar"
+            name="parquet-hadoop-bundle-1.6.0.jar"
+            mvn_uri="mvn:org.talend.libraries/parquet-hadoop-bundle-1.6.0/6.0.0"/>
+
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.emr550"
             id="stringtemplate-3.2.1.jar"
             name="stringtemplate-3.2.1.jar"
             mvn_uri="mvn:org.talend.libraries/stringtemplate-3.2.1/6.0.0"/>
@@ -1463,9 +1469,9 @@
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr550"
-            id="spark-streaming-kinesis-asl_2.11"
-            name="spark-streaming-kinesis-asl_2.11.jar"
-            mvn_uri="mvn:org.talend.libraries/spark-streaming-kinesis-asl_2.11/6.0.0"/>
+            id="spark-streaming-kinesis-asl_2.11-2.1.0.jar"
+            name="spark-streaming-kinesis-asl_2.11-2.1.0.jar"
+            mvn_uri="mvn:org.talend.libraries/spark-streaming-kinesis-asl_2.11-2.1.0/6.0.0"/>
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr550"
@@ -1943,7 +1949,6 @@
             <library id="hk2-api-2.4.0-b34.jar"/>
 			<library id="hk2-locator-2.4.0-b34.jar"/>
 			<library id="hk2-utils-2.4.0-b34.jar"/>
-			<library id="hive-common-2.1.1-amzn-0.jar"/>
 			<library id="htrace-core-3.1.0-incubating.jar"/>
     		<library id="httpclient-4.5.2.jar"/>
 			<library id="httpcore-4.4.4.jar"/>
@@ -2020,7 +2025,7 @@
 			<library id="parquet-encoding-1.8.1.jar"/>
 			<library id="parquet-format-2.3.0-incubating.jar"/>
 			<library id="parquet-hadoop-1.8.1.jar"/>
-			<library id="parquet-hadoop-bundle-1.8.1.jar"/>
+			<library id="parquet-hadoop-bundle-1.6.0.jar"/>
 			<library id="parquet-jackson-1.8.1.jar"/>
 			<library id="pmml-model-1.2.15.jar"/>
 			<library id="pmml-schema-1.2.15.jar"/>
@@ -2092,7 +2097,7 @@
                 id="SPARK-PARQUET-LIB-MRREQUIRED-EMR_5_5_0_LATEST"
                 name="SPARK-PARQUET-LIB-MRREQUIRED-EMR_5_5_0_LATEST">
              <library id="parquet-avro-1.4.1.jar"/>
-             <library id="parquet-hadoop-bundle-1.8.1.jar" />
+             <library id="parquet-hadoop-bundle-1.6.0.jar" />
              <library id="jodd-core-3.5.2.jar" />
         </libraryNeededGroup>
 
@@ -2101,9 +2106,8 @@
                 description="Spark Hive libraries for EMR 5.5.0 that are MRREQUIRED"
                 id="SPARK-HIVE-LIB-MRREQUIRED-EMR_5_5_0_LATEST"
                 name="SPARK-HIVE-LIB-MRREQUIRED-EMR_5_5_0_LATEST">
-            <library id="hive-exec-2.1.1-amzn-0.jar"/>
             <library id="hive-exec-1.2.1-spark2-amzn-0.jar"/>
-            <library id="hive-metastore-2.1.1-amzn-0.jar"/>
+            <library id="hive-metastore-1.2.1-spark2-amzn-0.jar"/>
             <library id="libfb303-0.9.2.jar"/>
         </libraryNeededGroup>
 
@@ -2123,7 +2127,7 @@
                 description="Spark Kinesis libraries for EMR 5.5.0 that are MRREQUIRED"
                 id="SPARK-KINESIS-LIB-MRREQUIRED-EMR_5_5_0_LATEST"
                 name="SPARK-KINESIS-LIB-MRREQUIRED-EMR_5_5_0_LATEST">
-            <library id="spark-streaming-kinesis-asl_2.11"/>
+            <library id="spark-streaming-kinesis-asl_2.11-2.1.0.jar"/>
             <library id="amazon-kinesis-client-1.2.1.jar"/>
             <library id="aws-java-sdk-kinesis-1.10.75.1.jar"/>
             <library id="aws-java-sdk-core-1.10.75.1.jar"/>
@@ -2138,8 +2142,6 @@
                 id="SPARK-KAFKA-ASSEMBLY-LIB-MRREQUIRED-EMR_5_5_0_LATEST"
                 name="SPARK-KAFKA-ASSEMBLY-LIB-MRREQUIRED-EMR_5_5_0_LATEST">
             <library id="spark-streaming-kafka-0-10-assembly_2.11-2.1.0.jar"/>
-            <!--library id="kafka_2.10-0.8.2.1.jar"/>
-            <library id="metrics-core-2.2.0.jar"/-->
         </libraryNeededGroup>
 
         <!-- Spark Kafka Avro group MRREQUIRED -->
