fix(TBD-4899): Add parquet-hadoop-bundle dependency for CDH58 Spark2

--- a/main/plugins/org.talend.hadoop.distribution.cdh580spark2/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh580spark2/plugin.xml
@@ -77,19 +77,10 @@
         
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.cdh580spark2"
-            id="parquet-hadoop-bundle-cdh5.7.0"
-            name="parquet-hadoop-bundle-1.5.0-cdh5.7.0.jar"
-            mvn_uri="mvn:org.talend.libraries/parquet-hadoop-bundle-1.5.0-cdh5.7.0/6.1.0">
-        </libraryNeeded>
-                        
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.cdh580spark2"
             id="jodd-core-3.5.2.jar"
             name="jodd-core-3.5.2.jar"
             mvn_uri="mvn:org.talend.libraries/jodd-core-3.5.2/6.0.0">
-        </libraryNeeded>  
-        
-        
+        </libraryNeeded>
         
         <!-- Spark2 libraries -->
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.cdh580spark2" id="akka-actor.jar" name="akka-actor.jar" mvn_uri="mvn:org.talend.libraries/akka-actor/6.0.0"/>
@@ -202,6 +193,7 @@
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.cdh580spark2" id="parquet-encoding-1.8.1.jar" name="parquet-encoding-1.8.1.jar" mvn_uri="mvn:org.talend.libraries/parquet-encoding-1.8.1/6.0.0"/>
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.cdh580spark2" id="parquet-format-2.3.1.jar" name="parquet-format-2.3.1.jar" mvn_uri="mvn:org.talend.libraries/parquet-format-2.3.1/6.0.0"/>
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.cdh580spark2" id="parquet-hadoop-1.5.0-cdh5.7.0.jar" name="parquet-hadoop-1.5.0-cdh5.7.0.jar" mvn_uri="mvn:org.talend.libraries/parquet-hadoop-1.5.0-cdh5.7.0/6.0.0"/>
+        <libraryNeeded context="plugin:org.talend.hadoop.distribution.cdh580spark2" id="parquet-hadoop-bundle-1.5.0-cdh5.8.0.jar" name="parquet-hadoop-bundle-1.5.0-cdh5.8.0.jar" mvn_uri="mvn:org.talend.libraries/parquet-hadoop-bundle-1.5.0-cdh5.8.0/6.0.0"/>
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.cdh580spark2" id="parquet-hadoop-1.7.0.jar" name="parquet-hadoop-1.7.0.jar" mvn_uri="mvn:org.talend.libraries/parquet-hadoop-1.7.0/6.0.0"/>
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.cdh580spark2" id="parquet-jackson-1.7.0.jar" name="parquet-jackson-1.7.0.jar" mvn_uri="mvn:org.talend.libraries/parquet-jackson-1.7.0/6.0.0"/> 
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.cdh580spark2" id="pmml-model-1.2.15.jar" name="pmml-model-1.2.15.jar" mvn_uri="mvn:org.talend.libraries/pmml-model-1.2.15/6.0.0"/>
@@ -604,6 +596,7 @@
              <library id="jackson-jaxrs-1.8.8.jar"/>
              <library id="jackson-xc-1.8.8.jar"/>
              <library id="jersey-client-1.9.jar"/>
+             <library id="parquet-hadoop-bundle-1.5.0-cdh5.8.0.jar"/>
         </libraryNeededGroup>       
         
         <!-- Spark2 group -->
@@ -723,19 +716,19 @@
              <library id="oro-2.0.8.jar"/>
              <library id="osgi-resource-locator-1.0.1.jar"/>
              <library id="paranamer-2.3.jar"/>
+             <library id="parquet-hadoop-bundle-1.5.0-cdh5.8.0.jar"/>
+             <library id="parquet-hadoop-1.7.0.jar"/>
              <library id="pmml-model-1.2.15.jar"/>
              <library id="pmml-schema-1.2.15.jar"/>
              <library id="py4j-0.10.1.jar"/>
              <library id="pyrolite-4.13.jar"/>
              <library id="RoaringBitmap-0.5.11.jar"/>
-             
              <library id="scala-compiler-2.11.8.jar"/>
              <library id="scala-library-2.11.8.jar"/>
              <library id="scalap-2.11.8.jar"/>
              <library id="scala-parser-combinators_2.11-1.0.4.jar"/>
              <library id="scala-reflect-2.11.8.jar"/>
              <library id="scala-xml_2.11-1.0.2.jar"/>
-
              <library id="spark-catalyst_2.11-2.0.0.cloudera1.jar"/>
              <library id="spark-core_2.11-2.0.0.cloudera1.jar"/>
              <library id="spark-graphx_2.11-2.0.0.cloudera1.jar"/>
@@ -749,11 +742,9 @@
              <library id="spark-sketch_2.11-2.0.0.cloudera1.jar"/>
              <library id="spark-sql_2.11-2.0.0.cloudera1.jar"/>
              <library id="spark-streaming_2.11-2.0.0.cloudera1.jar"/>
-
              <library id="spark-tags_2.11-2.0.0.cloudera1.jar"/>
              <library id="spark-unsafe_2.11-2.0.0.cloudera1.jar"/>
              <library id="spark-yarn_2.11-2.0.0.cloudera1.jar"/>
-
              <library id="spire_2.11-0.7.4.jar"/>
              <library id="spire-macros_2.11-0.7.4.jar"/>
              <library id="ST4-4.0.4.jar"/>
@@ -774,6 +765,7 @@
                 id="SPARK-LIB-MRREQUIRED-CDH580_SPARK2"
                 name="SPARK-LIB-MRREQUIRED-CDH580_SPARK2">
              <library id="snappy-java-1.0.4.1.jar"/>
+             <library id="parquet-hadoop-bundle-1.5.0-cdh5.8.0.jar"/>
         </libraryNeededGroup>
                 
         <!-- Spark Parquet group MRREQUIRED -->
@@ -789,6 +781,7 @@
              <library id="parquet-format-2.1.0.jar"/>
              <library id="parquet-hadoop-1.5.0-cdh5.7.0.jar"/>
              <library id="parquet-hadoop-1.7.0.jar"/>
+             <library id="parquet-hadoop-bundle-1.5.0-cdh5.8.0.jar"/>
              <library id="parquet-jackson-1.5.0.jar"/>        
         </libraryNeededGroup>
         
