--- a/main/plugins/org.talend.repository.hdfs/plugin.xml
+++ b/main/plugins/org.talend.repository.hdfs/plugin.xml
@@ -17,7 +17,7 @@
             isResouce="true"
             key="HDFS"
             label="%HDFS"
-            name_pattern="[^\s\t~!`#^&amp;$*%@\\/?:;\.()，。&apos;￥‘”、《，》&lt;&gt;]+"
+            name_pattern="[^\s\t~!`#^&amp;$*%@\\/?:;()，。&apos;￥‘”、《，》&lt;&gt;]+"
             ordinal="50"
             products="DI"
             type="HDFS">
