--- a/main/plugins/org.talend.hadoop.distribution.hdinsight360/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdinsight360/plugin.xml
@@ -74,6 +74,17 @@
             mvn_uri="mvn:org.talend.libraries/jackson-core-2.8.4/6.0.0"
             uripath="platform:/plugin/org.talend.libraries.jackson/lib/jackson-core-2.8.4.jar">
         </libraryNeeded>
+        <libraryNeeded 
+        	context="plugin:org.talend.hadoop.distribution.hdinsight360" 
+        	id="commons-collections-3.2.2.jar" 
+        	name="commons-collections-3.2.2.jar" 
+        	mvn_uri="mvn:org.talend.libraries/commons-collections-3.2.2/6.0.0"/>
+        <libraryNeeded 
+        	context="plugin:org.talend.hadoop.distribution.hdinsight360" 
+        	id="guava-14.0.1.jar" 
+        	name="guava-14.0.1.jar" 
+        	mvn_uri="mvn:org.talend.libraries/guava-14.0.1/6.0.0">
+        </libraryNeeded>
         
         <!-- Hive libraries -->  
         <libraryNeeded
@@ -290,6 +301,8 @@
              <library id="hadoop-common-2.7.3.2.6.0.2-76" />
              <library id="commons-logging-1.1.3" />
              <library id="jackson-core-asl-1.9.13" />
+             <library id="commons-collections-3.2.2.jar" />
+             <library id="guava-14.0.1.jar" />
         </libraryNeededGroup>
         
         <!-- Map/Reduce parquet group --> 
