--- a/main/plugins/org.talend.hadoop.distribution.altus10/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.altus10/plugin.xml
@@ -6,30 +6,37 @@
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.altus10"
-            id="talend-bigdata-launcher-1.2.2-20170630"
+            id="talend-bigdata-launcher-1.2.2-20170630.jar"
             name="talend-bigdata-launcher-1.2.2-20170630.jar"
             mvn_uri="mvn:org.talend.libraries/talend-bigdata-launcher-1.2.2-20170630/6.0.0">
         </libraryNeeded>
         
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.altus10"
-            id="aws-java-sdk-core-1.11.132"
+            id="aws-java-sdk-core-1.11.132.jar"
             name="aws-java-sdk-core-1.11.132.jar"
             mvn_uri="mvn:org.talend.libraries/aws-java-sdk-core-1.11.132/6.0.0">
         </libraryNeeded>
         
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.altus10"
-            id="aws-java-sdk-s3-1.11.132"
+            id="aws-java-sdk-s3-1.11.132.jar"
             name="aws-java-sdk-s3-1.11.132.jar"
             mvn_uri="mvn:org.talend.libraries/aws-java-sdk-s3-1.11.132/6.0.0">
         </libraryNeeded>
         
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.cdh5100"
-            id="aws-java-sdk-kinesis-1.10.6"
+            context="plugin:org.talend.hadoop.distribution.altus10"
+            id="aws-java-sdk-kinesis-1.10.6.jar"
             name="aws-java-sdk-kinesis-1.10.6.jar"
             mvn_uri="mvn:org.talend.libraries/aws-java-sdk-kinesis-1.10.6/6.0.0">
+        </libraryNeeded>
+        
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.altus10"
+            id="amazon-kinesis-client-1.6.0.jar"
+            name="amazon-kinesis-client-1.6.0.jar"
+            mvn_uri="mvn:org.talend.libraries/amazon-kinesis-client-1.6.0/6.0.0">
         </libraryNeeded>
 
         <!-- HDFS common group -->
@@ -60,7 +67,7 @@
         	  description="Big Data launcher libraries for Altus 1.0"
               id="BIGDATA-LAUNCHER-LIB-ALTUS10"
               name="BIGDATA-LAUNCHER-LIB-ALTUS10">
-            <library id="talend-bigdata-launcher-1.2.2-20170630"/>
+            <library id="talend-bigdata-launcher-1.2.2-20170630.jar"/>
         </libraryNeededGroup>
         
         <!-- HDFS Spark 1.6 group -->
@@ -255,8 +262,8 @@
                 description="Spark S3 libraries for CDH 5.10 that are MRREQUIRED"
                 id="SPARK-S3-LIB-MRREQUIRED-ALTUS10"
                 name="SPARK-S3-LIB-MRREQUIRED-ALTUS10">
-            <library id="aws-java-sdk-s3-1.11.132"/>
-            <library id="aws-java-sdk-core-1.11.132" />
+            <library id="aws-java-sdk-s3-1.11.132.jar"/>
+            <library id="aws-java-sdk-core-1.11.132.jar" />
         </libraryNeededGroup>
 
         <!-- Map/Reduce group -->
@@ -287,12 +294,12 @@
                 description="Spark Kinesis libraries for CDH 5.10 that are MRREQUIRED"
                 id="SPARK-KINESIS-LIB-MRREQUIRED-ALTUS10"
                 name="SPARK-KINESIS-LIB-MRREQUIRED-ALTUS10">
-            <!--this is for tKinesisInput, but where to find this jar, and it's not assembly-->
-            <!--library id="spark-streaming-kinesis-asl_2.11-2.1.0.cloudera1"/-->
-            <!--this is for tKinesisInput, because aws-java-sdk version is 1.10.6, use this version may better-->
-            <!--library id="amazon-kinesis-client-1.6.0.jar"/-->
+            <library id="spark-streaming-kinesis-asl_2.11-2.1.0.jar"/>
+            <!--this is for tKinesisInput, because aws-java-sdk version is 1.10.6 in CDH5.11 , use this version is better-->
+            <library id="amazon-kinesis-client-1.6.0.jar"/>
+            <library id="aws-java-sdk-cloudwatch-1.10.6.jar"/>
             
-            <!--to make tKinesisOutput working, need this, in CDH cluster aws-java-sdk-core version is 1.10.6-->
+            <!--to make tKinesisOutput working, in CDH5.11 aws-java-sdk version is 1.10.6-->
             <library id="aws-java-sdk-kinesis-1.10.6.jar"/>
         </libraryNeededGroup>
         
