--- a/pom.xml
+++ b/pom.xml
@@ -68,8 +68,9 @@
         <module>main/plugins/org.talend.hadoop.distribution.cdh580spark2.jars</module>
         <module>main/plugins/org.talend.hadoop.distribution.cdh5100</module>
         <module>main/plugins/org.talend.hadoop.distribution.altus10</module>
-<!--         <module>main/plugins/org.talend.hadoop.distribution.cdh5100.jars</module>  -->
-        <module>main/plugins/org.talend.hadoop.distribution.custom</module>
+	<!--         <module>main/plugins/org.talend.hadoop.distribution.cdh5100.jars</module>  -->
+	<module>main/plugins/org.talend.hadoop.distribution.custom</module>
+        <module>main/plugins/org.talend.hadoop.distribution.altus10</module>
         <module>main/plugins/org.talend.hadoop.distribution.dataproc11</module>
         <module>main/plugins/org.talend.hadoop.distribution.dataproc11.jars</module>
         <module>main/plugins/org.talend.hadoop.distribution.emr103</module>
