fix(TBD-5078): Use the right avro-mapred version in the Spark 2 group for CDH 5.10

--- a/main/plugins/org.talend.hadoop.distribution.cdh5100/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh5100/plugin.xml
@@ -1190,7 +1190,7 @@
             <library id="arpack_combined_all-0.1.jar"/>
             <library id="avro-1.7.6-cdh5.8.1.jar"/>
             <library id="avro-ipc-1.7.6-cdh5.8.1.jar"/>
-            <library id="avro-mapred-1.7.6-cdh5.8.1.jar"/>
+            <library id="avro-mapred-1.7.6-cdh5.10.1-hadoop2.jar"/>
             <library id="blas-0.8.jar"/>
             <library id="bonecp-0.7.1.jar"/>
             <library id="breeze_2.11-0.11.2.jar"/>
